[package]
name = "ome-ngff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.3"
log = { version = "0.4.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
